data/derived/fa15/progs/unify/prog0177.ml.out
Characters 60-62:
  n mod 10 :: [] :: digitsOfInt n/10;;
              ^^
Error: This expression has type 'a list
       but an expression was expected of type int
